# magical-merchant

./: '  .envrc  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  cargo.toml  flake.nix  justfile  package.json  pnpm-lock.yaml
.claude/skills/ui-component/: SKILL.md
.github/workflows/: ci.yml
core/: Cargo.toml  justfile
core/src/: error.rs  format.rs  frontmatter.rs  infra.rs  lib.rs  note.rs  path.rs  project.rs  save.rs  sync.rs  timeline.rs  utils.rs  validated.rs
core/src/infra/: fs_helpers.rs
core/src/note/: error.rs  mention.rs  mod.rs  model.rs  repository.rs  search.rs  summary.rs  title.rs  wikilink.rs
core/src/project/: error.rs  mod.rs  model.rs  repository.rs  summary.rs  task.rs
core/src/project/task/: mod.rs  model.rs  repository.rs  summary.rs
core/src/shared/: context.rs  mod.rs
core/src/sync/: client.rs  conflict.rs  diff.rs  mod.rs  scan.rs  state.rs
core/src/timeline/: error.rs  mod.rs  repository.rs  search.rs
core/src/utils/: device.rs  frontmatter.rs  markdown.rs  paths.rs  text.rs
dioxus-app/: Cargo.toml  Dioxus.toml  justfile
dioxus-app/assets/: open-props.min.css  style.css
dioxus-app/src/: components.rs  data_dir.rs  main.rs  markdown.rs  views.rs
dioxus-app/src/components/: action_bar.rs  icon.rs  markdown_editor.rs
dioxus-app/src/views/: notes.rs  tasks.rs  timeline.rs
mcp-cli/: Cargo.toml
mcp-cli/src/: main.rs
nix/: android-repo-fix.nix  darwin-module.nix  package.nix
plans/: 03-task-milkdown-editor.md  jolly-pondering-otter.md  steady-meandering-wolf.md
rust/: justfile
tauri-app/: .oxlintrc.json  index.html  justfile  package.json  pnpm-lock.yaml  screenshot.mjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
tauri-app/android-signing/: README.md  apply-signing.go  keystore.properties.example
tauri-app/src/: App.tsx  env.d.ts  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: auth.rs  device.rs  lib.rs  main.rs  sync.rs
tauri-app/src/components/: ActionBar.test.tsx  ActionBar.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  Document.tsx  Icon.test.tsx  Icon.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx  MarkdownToolbar.test.tsx  MarkdownToolbar.tsx  MilkdownEditor.tsx  NotesList.tsx  QuickCapture.tsx  SyncButton.tsx  TimelineEntry.test.tsx  TimelineEntry.tsx  ToggleMenu.test.tsx  ToggleMenu.tsx
tauri-app/src/layouts/: AppLayout.tsx
tauri-app/src/lib/: commands.ts  events.ts  exit-code-block-plugin.ts  fuzzy.test.ts  fuzzy.ts  highlighter.ts  location.ts  markdown.test.ts  markdown.ts  parse-timeline.test.ts  parse-timeline.ts  placeholder-plugin.ts  routes.ts  shiki-plugin.ts  smoke.test.ts  swipe-back.test.ts  swipe-back.ts  sync-status.test.ts  sync-status.ts  theme.test.ts  theme.ts
tauri-app/src/styles/: action-bar.css  base.css  command-palette.css  confirm-dialog.css  editor.css  layout.css  markdown-preview.css  markdown-toolbar.css  notes.css  settings.css  tasks.css  timeline.css
tauri-app/src/views/: Notes.tsx  Settings.tsx  Tasks.tsx  Timeline.tsx
workers/: justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  wrangler.toml
workers/src/: index.test.ts  index.ts  sync.test.ts  sync.ts  test-env.d.ts
