[package]
name = "magical-merchant-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
markdown-frontmatter = { version = "0.5", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
