[package]
name = "magical-merchant-dioxus"
version = "0.1.0"
edition = "2021"

[dependencies]
magical-merchant-core = { path = "../core" }
dioxus = { version = "0.7", features = ["desktop", "router"] }
dirs = "6"
chrono = "0.4"
tokio = { version = "1", features = ["rt"] }
pulldown-cmark = "0.12"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
invalid_reference_casting = "deny"

[lints.clippy]
mod_module_files = "warn"
excessive_precision = "warn"
# impl_trait_in_params disabled: conflicts with Dioxus Props derive macro
float_cmp = "warn"
redundant_field_names = "warn"
