[package]
name = "magical-merchant-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "magical_merchant_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
magical-merchant-core = { path = "../../core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
