[package]
name = "magical-merchant-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "magical_merchant_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
magical-merchant-core = { path = "../../core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["net", "io-util", "macros"] }
base64 = "0.22"
url = "2"
sha2 = "0.10"
open = "5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
