[package]
name = "magical-merchant-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "magical_merchant_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
magical-merchant-core = { path = "../../core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-geolocation = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["macros"] }
jsonwebtoken = "9"
url = "2"
hostname = "0.4"
sha2 = "0.10"
open = "5"

[target.'cfg(not(target_os = "android"))'.dependencies]
battery = "0.7"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
